VLESS-TCP-TLS-WS(GKE)/0gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: default
  annotations:
    # 提前创建cert map
    networking.gke.io/certmap: 
spec:
  gatewayClassName: gke-l7-global-external-managed
  addresses:
  # 提前创建IP Address（global）
  - type: NamedAddress
    value: 
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: All
